--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/flow": "1.7.0",
-    "@genkit-ai/googleai": "1.7.0",
-    "@genkit-ai/next": "1.7.0",
+    "@genkit-ai/flow": "latest",
+    "@genkit-ai/googleai": "latest",
+    "@genkit-ai/next": "latest",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -46,7 +46,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
-    "genkit": "1.7.0",
+    "genkit": "latest",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
@@ -67,7 +67,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.2.3",
-    "genkit-cli": "1.7.0",
+    "genkit-cli": "latest",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
