--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -48,7 +47,7 @@
     "firebase": "^11.8.1",
     "genkit": "latest",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "next": "^15.4.2",
     "patch-package": "^8.0.0",
     "pg": "^8.12.0",
     "react": "^18.3.1",
